--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ libclang.dylib
 C+++ Test.playground/Contents.swift
 C+++ Test.playground/contents.xcplayground
 C+++ Test.playground/timeline.xctimeline
+LLVM/*
