--- a/C+++.xcodeproj/xcshareddata/xcschemes/C+++.xcscheme
+++ b/C+++.xcodeproj/xcshareddata/xcschemes/C+++.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "18CB5C7A25CE3ED900FC2E9D"
+               BuildableName = "C+++Tests.xctest"
+               BlueprintName = "C+++Tests"
+               ReferencedContainer = "container:C+++.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
